--- a/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
@@ -332,7 +332,7 @@
 </div>
 
 
-<div class="modal fade" id="propertyManagerModal" tabindex="-1" aria-labelledby="propertyManagerModalLabel" aria-hidden="true">
+@* <div class="modal fade" id="propertyManagerModal" tabindex="-1" aria-labelledby="propertyManagerModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -352,49 +352,51 @@
             </div>
         </div>
     </div>
-</div>
+</div> *@
 
 <script>
     const saveButton = document.getElementById('saveButton');
-    const confirmPropertyManagerBtn = document.getElementById('confirmPropertyManager');
-    const noPropertyManagerBtn = document.getElementById('saveButton2');
+    // const confirmPropertyManagerBtn = document.getElementById('confirmPropertyManager');
+    // const noPropertyManagerBtn = document.getElementById('saveButton2');
 
 
     if (saveButton) {
         saveButton.addEventListener('click', function (event) {
+            console.log("111")
             event.preventDefault();
             const OwnerID = Number(document.getElementById('OwnerId') ? document.getElementById('OwnerId').value : '0');
-            if (!OwnerID || OwnerID <= 0) {
-                debugger;
-                $('#propertyManagerModal').modal('show');
-            } else {
-                checkValidationsAndSubmit();
-            }
+            checkValidationsAndSubmit();
+            // if (!OwnerID || OwnerID <= 0) {
+            //     debugger;
+            //     $('#propertyManagerModal').modal('show');
+            // } else {
+            //     checkValidationsAndSubmit();
+            // }
         });
     }
 
 
-    noPropertyManagerBtn.addEventListener('click', function () {
-        $('#propertyManagerModal').modal('hide');
-        submitTenantForm();
-    });
+    // noPropertyManagerBtn.addEventListener('click', function () {
+    //     $('#propertyManagerModal').modal('hide');
+    //     submitTenantForm();
+    // });
 
 
-    confirmPropertyManagerBtn.addEventListener('click', async function () {
-        $('#propertyManagerModal').modal('hide');
-        const firstName = document.getElementById('FirstName').value;
-        const lastName = document.getElementById('LastName').value;
-        const email = document.getElementById('EmailAddress').value;
-        const password = document.getElementById('managerPassword').value;
+    // confirmPropertyManagerBtn.addEventListener('click', async function () {
+    //     $('#propertyManagerModal').modal('hide');
+    //     const firstName = document.getElementById('FirstName').value;
+    //     const lastName = document.getElementById('LastName').value;
+    //     const email = document.getElementById('EmailAddress').value;
+    //     const password = document.getElementById('managerPassword').value;
 
-        if (password === "") {
-            alert("Please enter a password for the property manager.");
-            return;
-        }
+    //     if (password === "") {
+    //         alert("Please enter a password for the property manager.");
+    //         return;
+    //     }
 
-        const role = 'Property Manager';
-        await submitRegistration(firstName, lastName, email, password, role);
-    });
+    //     const role = 'Property Manager';
+    //     await submitRegistration(firstName, lastName, email, password, role);
+    // });
 
 
 
@@ -426,77 +428,6 @@
             additionalEmailField.style.display = additionalEmailField.style.display === "none" ? "block" : "none";
         };
 
-        function validateEmail(email) {
-            var re = /\S+@@\S+\.\S+/;
-            return re.test(email);
-        }
-
-        function validatePhoneNumber(phoneNumber) {
-            const pattern = /^(\+{0,})(\d{0,})([(]{1}\d{1,3}[)]{0,}){0,}(\s?\d+|\+\d{2,3}\s{1}\d+|\d+){1}[\s|-]?\d+([\s|-]?\d+){1,2}(\s){0,}$/gm;
-            return pattern.test(phoneNumber);
-        }
-
-
-
-        function validateFirstName(FirstName) {
-            return FirstName.trim().length > 0;
-        }
-
-        function validateLastName(LastName) {
-
-            return LastName.trim().length > 0;
-        }
-
-        function validateUnit(Unit) {
-
-            return Unit.trim().length > 0;
-        }
-
-        function validateRegion(Region) {
-            return Region.trim().length > 0;
-        }
-
-        function validatePostalCode(PostalCode) {
-            return PostalCode.trim().length > 0;
-        }
-        function validateAddress(address) {
-            return address.trim().length > 0;
-        }
-
-        function showError(message) {
-
-            toastr.error(message);
-        }
-
-        function validateEmai2valid(emailAddress2) {
-            if (emailAddress2.trim().length > 0) {
-                var re = /\S+@@\S+\.\S+/;
-                return re.test(emailAddress2);
-            }
-            else {
-                return true;
-            }
-        }
-
-        function validateWebsite(website) {
-            if (website.trim().length > 0) {
-                var re = /^https?:\/\/[^\s$.?#].[^\s]*$/;
-                return re.test(website);
-            }
-            else {
-                return true;
-            }
-        }
-
-        function validateField(field, validatorFunc, errorMessage) {
-            if (!validatorFunc(field.value)) {
-                showError(errorMessage);
-                return false;
-            } else {
-                return true;
-            }
-        }
-
 
 
         toastr.options = {
@@ -517,64 +448,142 @@
             "hideMethod": "fadeOut"
         };
 
-        // Collect input elements
-        const emailAddress = document.getElementById('EmailAddress');
-        const OrganizationName = document.getElementById('OrganizationName');
-        const emailAddress2 = document.getElementById('EmailAddress2');
-        const phoneNumber = document.getElementById('PhoneNumber');
-        const phoneNumber2 = document.getElementById('PhoneNumber2');
-        const website = document.getElementById('Website');
-        const address = document.getElementById('Address');
-        const FirstName = document.getElementById('FirstName');
-        const LastName = document.getElementById('LastName');
-        const Unit = document.getElementById('Address2');
-        const Region = document.getElementById('Region');
-        const PostalCode = document.getElementById('PostalCode');
-
-        function checkValidationsAndSubmit() {
-            const isEmailAddressValid = validateField(emailAddress, validateEmail, 'Please enter a valid email address.');
-            const isPhoneNumberValid = validateField(phoneNumber, validatePhoneNumber, 'Please enter a valid phone number.');
-            const isWebsiteValid = validateField(website, validateWebsite, 'Please enter a valid website URL.');
-            const isAddressValid = validateField(address, validateAddress, 'Address cannot be empty.');
-            const isEmail2Valid = validateField(emailAddress2, validateEmai2valid, 'Email address2 cannot be empty.');
-            const isFirstNameValid = validateField(FirstName, validateFirstName, 'FirstName cannot be empty.');
-            const isLastNameValid = validateField(LastName, validateLastName, 'LastName cannot be empty.');
-            const isUnitValid = validateField(Unit, validateUnit, 'Unit cannot be empty.');
-            const isRegionValid = validateField(Region, validateRegion, 'Region cannot be empty.');
-            const isPostalCodeValid = validateField(PostalCode, validatePostalCode, 'PostalCode cannot be empty.');
-            if (isEmailAddressValid && isPhoneNumberValid && isWebsiteValid && isAddressValid && isEmail2Valid && isFirstNameValid && isLastNameValid && isUnitValid && isRegionValid && isPostalCodeValid) {
-                submitTenantForm();
-            } else {
-                console.error("Validation errors present. Cannot submit form.");
-            }
-        }
 
 
-        const saveButton = document.getElementById('saveButton');
-        if (saveButton) {
-            saveButton.addEventListener('click', function (event) {
-                event.preventDefault();
-                const OwnerID = Number('@Model?.OwnerId');
-                if (!OwnerID || OwnerID <= 0) {
-                    $('#propertyManagerModal').modal('show');
-                } else {
-                    checkValidationsAndSubmit();
-                }
-            });
-        }
 
-        if (saveButton2) {
-            saveButton2.addEventListener('click', function (event) {
-                event.preventDefault();
-                $('#propertyManagerModal').modal('hide');
-                checkValidationsAndSubmit();
-            });
-        }
+
+        // const saveButton = document.getElementById('saveButton');
+        // if (saveButton) {
+        //     saveButton.addEventListener('click', function (event) {
+        //         console.log("2222")
+        //         event.preventDefault();
+        //         const OwnerID = Number('@Model?.OwnerId');
+        //         if (!OwnerID || OwnerID <= 0) {
+        //             $('#propertyManagerModal').modal('show');
+        //         } else {
+        //             checkValidationsAndSubmit();
+        //         }
+        //     });
+        // }
+
+        // if (saveButton2) {
+        //     saveButton2.addEventListener('click', function (event) {
+        //         event.preventDefault();
+        //         $('#propertyManagerModal').modal('hide');
+        //         checkValidationsAndSubmit();
+        //     });
+        // }
 
     });
 
+    function validateEmail(email) {
+        var re = /\S+@@\S+\.\S+/;
+        return re.test(email);
+    }
+
+    function validatePhoneNumber(phoneNumber) {
+        const pattern = /^(\+{0,})(\d{0,})([(]{1}\d{1,3}[)]{0,}){0,}(\s?\d+|\+\d{2,3}\s{1}\d+|\d+){1}[\s|-]?\d+([\s|-]?\d+){1,2}(\s){0,}$/gm;
+        return pattern.test(phoneNumber);
+    }
+
+
+
+    function validateFirstName(FirstName) {
+        return FirstName.trim().length > 0;
+    }
+
+    function validateLastName(LastName) {
+
+        return LastName.trim().length > 0;
+    }
+
+    function validateUnit(Unit) {
+
+        return Unit.trim().length > 0;
+    }
+
+    function validateRegion(Region) {
+        return Region.trim().length > 0;
+    }
+
+    function validatePostalCode(PostalCode) {
+        return PostalCode.trim().length > 0;
+    }
+    function validateAddress(address) {
+        return address.trim().length > 0;
+    }
+
+    function showError(message) {
+
+        toastr.error(message);
+    }
+
+    function validateEmai2valid(emailAddress2) {
+        if (emailAddress2.trim().length > 0) {
+            var re = /\S+@@\S+\.\S+/;
+            return re.test(emailAddress2);
+        }
+        else {
+            return true;
+        }
+    }
+
+    function validateWebsite(website) {
+        if (website.trim().length > 0) {
+            var re = /^https?:\/\/[^\s$.?#].[^\s]*$/;
+            return re.test(website);
+        }
+        else {
+            return true;
+        }
+    }
+
+    function validateField(field, validatorFunc, errorMessage) {
+        if (!validatorFunc(field.value)) {
+            showError(errorMessage);
+            return false;
+        } else {
+            return true;
+        }
+    }
+
+    // Collect input elements
+    const emailAddress = document.getElementById('EmailAddress');
+    const OrganizationName = document.getElementById('OrganizationName');
+    const emailAddress2 = document.getElementById('EmailAddress2');
+    const phoneNumber = document.getElementById('PhoneNumber');
+    const phoneNumber2 = document.getElementById('PhoneNumber2');
+    const website = document.getElementById('Website');
+    const address = document.getElementById('Address');
+    const FirstName = document.getElementById('FirstName');
+    const LastName = document.getElementById('LastName');
+    const Unit = document.getElementById('Address2');
+    const Region = document.getElementById('Region');
+    const PostalCode = document.getElementById('PostalCode');
+
+    function checkValidationsAndSubmit() {
+        console.log("asdas")
+        const isEmailAddressValid = validateField(emailAddress, validateEmail, 'Please enter a valid email address.');
+        const isPhoneNumberValid = validateField(phoneNumber, validatePhoneNumber, 'Please enter a valid phone number.');
+        const isWebsiteValid = validateField(website, validateWebsite, 'Please enter a valid website URL.');
+        const isAddressValid = validateField(address, validateAddress, 'Address cannot be empty.');
+        const isEmail2Valid = validateField(emailAddress2, validateEmai2valid, 'Email address2 cannot be empty.');
+        const isFirstNameValid = validateField(FirstName, validateFirstName, 'FirstName cannot be empty.');
+        const isLastNameValid = validateField(LastName, validateLastName, 'LastName cannot be empty.');
+        const isUnitValid = validateField(Unit, validateUnit, 'Unit cannot be empty.');
+        const isRegionValid = validateField(Region, validateRegion, 'Region cannot be empty.');
+        const isPostalCodeValid = validateField(PostalCode, validatePostalCode, 'PostalCode cannot be empty.');
+        if (isEmailAddressValid && isPhoneNumberValid && isWebsiteValid && isAddressValid && isEmail2Valid && isFirstNameValid && isLastNameValid && isUnitValid && isRegionValid && isPostalCodeValid) {
+            submitTenantForm();
+        } else {
+            console.error("Validation errors present. Cannot submit form.");
+        }
+    }
+
+ 
+
+
     async function submitTenantForm(event) {
-        debugger;
         const fileInputs = {
             'DocumentFile': 'DocumentBase64',
             'PictureUrl': 'PictureBase64',
@@ -671,41 +680,41 @@
         window.location.href = '/Landlord/Download?id=' + id;
     }
 
-    async function submitRegistration(firstName, lastName, email, password, role) {
-        const formDataJsonString = JSON.stringify({
-            Name: `${firstName} ${lastName}`,
-            Email: email,
-            Password: password,
-            UserName: email,
-            Role: role
-        });
+    // async function submitRegistration(firstName, lastName, email, password, role) {
+    //     const formDataJsonString = JSON.stringify({
+    //         Name: `${firstName} ${lastName}`,
+    //         Email: email,
+    //         Password: password,
+    //         UserName: email,
+    //         Role: role
+    //     });
 
-        try {
-            const response = await fetch('/Landlord/Register', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'Accept': 'application/json'
-                },
-                body: formDataJsonString
-            });
+    //     try {
+    //         const response = await fetch('/Landlord/Register', {
+    //             method: 'POST',
+    //             headers: {
+    //                 'Content-Type': 'application/json',
+    //                 'Accept': 'application/json'
+    //             },
+    //             body: formDataJsonString
+    //         });
 
-            if (response.ok) {
-                const jsonResponse = await response.json();
-                console.log(jsonResponse);
-                Swal.fire('Registered Successfully', '', 'success');
-                window.location.href = '/Auth/Login';
-            } else {
-                throw new Error('Something went wrong with the registration process.');
-            }
-        } catch (error) {
-            console.error('Error:', error);
-            Swal.fire('Registration Failed', 'Please try again!', 'error');
-        }
-    }
+    //         if (response.ok) {
+    //             const jsonResponse = await response.json();
+    //             console.log(jsonResponse);
+    //             Swal.fire('Registered Successfully', '', 'success');
+    //             window.location.href = '/Auth/Login';
+    //         } else {
+    //             throw new Error('Something went wrong with the registration process.');
+    //         }
+    //     } catch (error) {
+    //         console.error('Error:', error);
+    //         Swal.fire('Registration Failed', 'Please try again!', 'error');
+    //     }
+    // }
 
-    function checkValidationsAndSubmit() {
+    // function checkValidationsAndSubmit() {
 
-    }
+    // }
 
 </script>
