--- a/PMS-PropertyHapa/Views/Shared/_IdentityLayout.cshtml
+++ b/PMS-PropertyHapa/Views/Shared/_IdentityLayout.cshtml
@@ -33,6 +33,8 @@
     <link id="color" rel="stylesheet" href="~/Dashboard/assets/css/color-1.css" media="screen">
     <!-- Responsive css-->
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/responsive.css">
+    @* <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet"> *@
+
 </head>
 <body>
     <!-- Loader starts-->
@@ -51,8 +53,8 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xl-6"><img class="bg-img-cover bg-center" src="~/Dashboard/assets/images/login/2.jpg" alt="looginpage"></div>
-                <div class="col-xl-6 p-0">
+                <div class="col-xl-4"><img class="bg-img-cover bg-center" src="~/Dashboard/assets/images/login/2.jpg" alt="looginpage"></div>
+                <div class="col-xl-8 p-0">
                     <div class="login-card">
                         @RenderBody()
 
@@ -81,9 +83,10 @@
             }, false);
         })();
     </script>
-
     <script src="~/Dashboard/assets/js/jquery-3.5.1.min.js"></script>
     <script src="~/Dashboard/assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script>
+    @* <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script> *@
     <script src="~/Dashboard/assets/js/icons/feather-icon/feather.min.js"></script>
     <script src="~/Dashboard/assets/js/icons/feather-icon/feather-icon.js"></script>
     <script src="~/Dashboard/assets/js/config.js"></script>
