--- a/PMS-PropertyHapa.Owner/Views/Shared/ManagePropertyforOwnerLayout.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Shared/ManagePropertyforOwnerLayout.cshtml
@@ -440,7 +440,9 @@
     <!-- Plugins JS start-->
     <script src="~/Dashboard/assets/js/datatable/datatables/jquery.dataTables.min.js"></script>
     <script src="~/Dashboard/assets/js/datatable/datatables/datatable.custom.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.all.min.js"></script>
+@*     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.all.min.js"></script>
+ *@
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.10.8/sweetalert2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
     <script>
         $(document).ready(function () {
