--- a/PMS-PropertyHapa.Staff/Views/Shared/_IdentityLayout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_IdentityLayout.cshtml
@@ -95,7 +95,9 @@
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
     <script src="~/Dashboard/assets/js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.all.min.js"></script>
+@*     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.all.min.js"></script>
+ *@
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.10.8/sweetalert2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
 
     <!-- login js-->
