--- a/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
@@ -273,14 +273,10 @@
                                         <li><a href="@Url.Action("Invoices","Accounting")">View Invoices</a></li>
                                     </ul>
                                 </li>
-                                <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="#">
+                                <li class="sidebar-link">
+                                    <a class="sidebar-link sidebar-title link-nav" href="@Url.Action("ViewTask","Task")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-aperture"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg><span>Task</span>
                                     </a>
-                                    <ul class="sidebar-submenu">
-                                        <li><a href="@Url.Action("AddTask","Task")">Add Task</a></li>
-                                        <li><a href="@Url.Action("ViewTask","Task")">View Task</a></li>
-                                    </ul>
                                 </li>
                                 <li class="sidebar-list">
                                     <a class="sidebar-link sidebar-title" href="@Url.Action("Index","Communication")">
@@ -328,12 +324,12 @@
                                     </ul>
                                 </li>
                             </ul>
-                            <div class="sidebar-img-section">
+                           @*  <div class="sidebar-img-section">
                                 <div class="sidebar-img-content">
                                     <img class="img-fluid" src="../assets/images/side-bar.png" alt="">
                                     <h4>Feed Back</h4><a class="txt" href="#">Feedback is the breakfast of champions."</a><a class="btn btn-secondary" href="#">Give Feedback</a>
                                 </div>
-                            </div>
+                            </div> *@
                         </div>
                         <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
                     </nav>
